# Intergalactica-Discord-Bot-Rust

./: .gitignore  Cargo.toml
src/: client.rs  handler.rs  main.rs  mod.rs
src/commands/: math.rs  owner.rs
src/database/: connection.rs  mod.rs  schema.rs  utils.rs
src/database/helpers/: general.rs
src/database/models/: human.rs  mod.rs
src/database/repository/: human.rs
src/discord_helpers/: embed_utils.rs  mod.rs  ui.rs
src/modules/: mod.rs
src/modules/conversion/: core.rs  currency.rs  currency_symbols.rs  data_controller.rs  mod.rs  models.rs
src/modules/conversion/currency/: currency.rs  mod.rs
src/modules/conversion/currency/data/: currencies.json
src/modules/conversion/currency/models/: currency.rs  mod.rs
src/modules/conversion/data/: measurements.json
src/modules/conversion/measurement/: measurement.rs  mod.rs  utils.rs
src/modules/conversion/models/: core.rs  currency.rs  measurement.rs  mod.rs
src/modules/conversion/repository/: currency_repository.rs  measurement_repository.rs  mod.rs
src/modules/games/: base.rs  mod.rs
src/modules/games/tetris/: command.rs  mod.rs
src/modules/games/tictactoe/: command.rs  game.rs  mod.rs
src/modules/games/trivia/: command.rs
src/modules/pigeon/: mod.rs
src/modules/pigeon/commands/: base.rs  battle.rs  buy.rs  class.rs  clean.rs  explore.rs  feed.rs  heal.rs  mod.rs  play.rs  poop.rs  poopable.rs  poopeable.rs  profile.rs  retrieve.rs  rob.rs  space.rs  space_action.rs  space_explore.rs  spaceplore.rs  stuff.rs  train.rs
src/modules/pigeon/helpers/: increase_stats.rs  mod.rs  utils.rs  validation.rs  winning_message.rs
src/modules/pigeon/models/: exploration.rs  mod.rs  pigeon.rs
src/modules/pigeon/repository/: exploration.rs  mod.rs  pigeon.rs  planet_exploration.rs
src/modules/pigeon/tasks/: decay.rs  mod.rs  unjail.rs
src/modules/shared/: mod.rs
src/modules/shared/caching/: bucket.rs  flag.rs  human.rs  mod.rs
src/modules/shared/helpers/: chooser.rs  mod.rs  stat.rs  utils.rs
src/modules/shared/models/: human.rs
src/modules/shared/repository/: human.rs  item.rs  mod.rs  reminder.rs  streak.rs
src/modules/shared/tasks/: mod.rs  reminders.rs
src/redis_utils/: connection.rs
src/wrappers/: mod.rs
src/wrappers/fixerio/: api.rs  models.rs
src/wrappers/opentrivia/: api.rs  base_api.rs  mod.rs  models.rs
(+42 files in other folders)
