[package]
name    = "intergalactica_discord_bot_rust"
version = "0.1.0"
authors = ["Claderoki", "Zengatsu"]
edition = "2018"

[dependencies]
diesel             = { version = "1.4.4", features = ["mysql"] }
dotenv             = "0.15"
once_cell          = "1.7.2"
tracing            = "0.1.23"
tracing-subscriber = "0.2"
measurements       = "^0.9.0"
regex              = "1"
mysql              = "*"
reqwest            = "0.11.1"
serde              = "1.0.116"
serde_json         = "1.0.59"
rand               = "*"

[dependencies.tokio]
version  = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend", "collector"]

[dependencies.redis]
version = "*"