[package]
name    = "intergalactica_discord_bot_rust"
version = "1.0.0"
authors = ["Claderoki", "Zengatsu"]
edition = "2018"

[dependencies]
diesel             = { version = "1.4.4", features = ["mysql", "chrono"] }
dotenv             = "0.15"
tracing            = "0.1.23"
tracing-subscriber = "0.2"
rand               = "*"
chrono             = "*"
async-trait        = "0.1.50"

[dependencies.tokio]
version  = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.10.9"
features = ["cache", "framework", "standard_framework", "rustls_backend", "collector", "unstable_discord_api", "builder"]

[dependencies.redis]
version = "*"